# Tokio-Pulse

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEV_LOG.md  README.md  ROADMAP.md  clippy.toml  dev.sh  rustfmt.toml
.github/scripts/: analyze_trends.py  check_perf.py  generate_report.py
.github/workflows/: benchmarks.yml  ci.yml  nightly-bench.yml
docs/: benchmark-architecture.md  benchmark-patterns-analysis.md  benchmark-research.md  benchmark-validation-report.md  kubernetes-cpu-manager-research.md  linux-cfs-cgroups-research.md  linux-scheduler-wasted-cores-analysis.md  macos-gcd-qos-research.md  os-abstraction-layer-design.md  performance-critical-paths.md  slow-queue-architecture.md  tier-transition-state-machine.md  tiermanager-threat-model.md  windows-scheduling-job-objects-research.md
src/: budget.rs  lib.rs
tokio-preempt/: Cargo.toml
tokio-preempt/tokio-pulse/: Cargo.toml
tokio-preempt/tokio-pulse/benches/: budget.rs  cpu_timing.rs  hooks.rs  tier_manager.rs  worker_stats.rs
tokio-preempt/tokio-pulse/examples/: cpu_timing_demo.rs
tokio-preempt/tokio-pulse/src/: budget.rs  hooks.rs  isolation.rs  lib.rs  metrics.rs  reschedule.rs  slow_queue.rs  tier_manager.rs
tokio-preempt/tokio-pulse/src/timing/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
tokio-preempt/tokio-pulse/tests/: cpu_timing_integration.rs  quick_validation.rs  real_world_validation.rs  stress_tests.rs  tier_manager_integration.rs  tier_manager_properties.proptest-regressions  tier_manager_properties.rs  tokio_fork_integration.rs  tokio_runtime_integration.rs  worker_stats_comprehensive.rs
tokio-pulse-macros/: Cargo.toml
tokio-pulse-macros/src/: lib.rs
tower-pulse/: Cargo.toml
tower-pulse/examples/: axum_server.rs
tower-pulse/src/: lib.rs
